[workspace]
resolver = "2"
members = ["net-vitals", "net-vitals-common", "net-vitals-ebpf"]
default-members = ["net-vitals", "net-vitals-common"]


[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = "symbols"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
libc = { version = "0.2.159", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.net-vitals-ebpf]
debug = false
codegen-units = 1
