[package]
name = "net-vitals-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
net-vitals-common = { path = "../net-vitals-common" }

aya-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "net-vitals"
path = "src/main.rs"
